--- a/src/components/projects/project-card/project-card.module.scss
+++ b/src/components/projects/project-card/project-card.module.scss
@@ -10,7 +10,7 @@
    perspective: 150rem;
    -moz-perspective: 150rem;
    position: relative;
-   margin: 2rem 3rem;
+   margin: 2rem;
    background-color: transparent;
    border: none;
 
