--- a/src/components/projects/projects.module.scss
+++ b/src/components/projects/projects.module.scss
@@ -4,4 +4,5 @@
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
+   max-width: 120rem;
 }
