--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -4,4 +4,6 @@
    
    display: grid;
    width: 100%;
+
+   --items-max-width: 70rem;
 }
