--- a/src/styles/components/_heading.scss
+++ b/src/styles/components/_heading.scss
@@ -5,7 +5,7 @@
    text-align: center;
    
    @media only screen and (min-width: 700px) {
-      margin: 0 calc(50vw - 35rem);
-      max-width: 70rem;
+      max-width: var(--items-max-width);
+      justify-self: center;
    }
 }
